Setup CI/CD via GitHub Actions

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,5 +2,5 @@
 <main>
   <h1>Welcome to the Homepage!</h1>
   <h2>This web page was built using:</h2>
-  <img src="/angular_wordmark_gradient.webp" alt="" />
+  <img src="angular_wordmark_gradient.webp" alt="Angular logo" />
 </main>
